--- a/public/styles/scss/dasbor.scss
+++ b/public/styles/scss/dasbor.scss
@@ -72,10 +72,11 @@ body {
           padding: 0.4rem 0;
           width: 100%;
           height: 4rem;
-          border: solid 0.1rem #000000;
+          border: solid 0.1rem rgb(42, 23, 209);
           border-radius: 1rem;
           flex-shrink: 0;
           box-sizing: border-box;
+          color: #0978f2;
 
           .icon-text-Wi4 {
             width: 12.9rem;
