--- a/public/styles/dasboardsuplier.css
+++ b/public/styles/dasboardsuplier.css
@@ -529,7 +529,7 @@ body {
   justify-content: center;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6 {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6, .frame-703-gM6 {
   box-sizing: border-box;
   padding: 1.8rem 7.4rem 1.7rem 2.4rem;
   width: 100%;
@@ -539,7 +539,7 @@ body {
   border: solid 0.1rem #000000;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6 .frame-696-1PN {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6 .frame-696-1PN, .frame-703-gM6 .frame-696-1PN {
   margin-right: 26.4rem;
   width: 8.8rem;
   height: 100%;
@@ -557,7 +557,7 @@ body {
   justify-content: center;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6 .frame-697-iHn {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6 .frame-697-iHn, .frame-703-gM6 .frame-697-iHn {
   margin-right: 15.4rem;
   width: 9rem;
   height: 100%;
@@ -575,7 +575,7 @@ body {
   justify-content: center;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6 .frame-698-23a {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6 .frame-698-23a, .frame-703-gM6 .frame-698-23a {
   margin-right: 11.6rem;
   width: 10.1rem;
   height: 100%;
@@ -594,7 +594,7 @@ body {
   justify-content: center;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6 .frame-707-vek {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-703-gM6 .frame-707-vek, .frame-707-vek {
   width: 6rem;
   height: 100%;
   overflow: hidden;
@@ -677,7 +677,7 @@ body {
   justify-content: center;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-707-pk8 .frame-708-c3i {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .frame-707-pk8 .frame-708-c3i, .frame-708-c3i {
   width: 8rem;
   height: 100%;
   overflow: hidden;
@@ -694,14 +694,14 @@ body {
   justify-content: center;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz, .auto-group-rjpe-odz {
   margin: 0rem 0.5rem 0rem 2.4rem;
   width: calc(100% - 2.9rem);
   display: flex;
   align-items: flex-start;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz .pay-button-vic {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz .pay-button-vic, .auto-group-rjpe-odz .pay-button-vic {
   margin-right: 53.7rem;
   width: 25.2rem;
   height: 4.6rem;
@@ -719,7 +719,7 @@ body {
   border-radius: 0.8rem;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz .pagination-bZr {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz .pagination-bZr, .auto-group-rjpe-odz .pagination-bZr {
   margin-top: 0.4rem;
   box-sizing: border-box;
   padding: 1.16rem 1.8rem 1.16rem 2.057rem;
@@ -727,7 +727,7 @@ body {
   align-items: center;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz .pagination-bZr .bold-arrows-alt-arrow-left-iuN {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz .pagination-bZr .bold-arrows-alt-arrow-left-iuN, .auto-group-rjpe-odz .pagination-bZr .bold-arrows-alt-arrow-left-iuN {
   margin-right: 8.8714rem;
   width: 1.3714rem;
   height: 2.48rem;
@@ -735,7 +735,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz .pagination-bZr .bold-arrows-alt-arrow-right-T6G {
+.dasbrod-qHz .auto-group-36he-AWc .auto-group-4zy8-LHv .frame-2609092-ATJ .frame-695-WXA .auto-group-rjpe-odz .pagination-bZr .bold-arrows-alt-arrow-right-T6G, .auto-group-rjpe-odz .pagination-bZr .bold-arrows-alt-arrow-right-T6G {
   width: 1.2rem;
   height: 2.48rem;
   object-fit: contain;
@@ -749,4 +749,4 @@ body {
     color: #000; /* Ganti warna tautan sesuai kebutuhan */
   }
 
-  
+
