--- a/public/styles/dasbor.css
+++ b/public/styles/dasbor.css
@@ -81,10 +81,10 @@ body {
     padding: 0.4rem 0;
     width: 100%;
     height: 4rem;
-    border: solid 0.1rem #15baec;
+    border: solid 0.1rem #0e1011;
     border-radius: 1rem;
     flex-shrink: 0;
-    background-color: #00ffff;
+    background-color: #ffffff;
     font-weight: 500;
 }
 .dasbor-xPi
