--- a/public/styles/riwayat-barang-masuk.css
+++ b/public/styles/riwayat-barang-masuk.css
@@ -866,3 +866,65 @@ body {
   font-family: Outfit, 'Source Sans Pro';
   white-space: nowrap;
 }
+.content-kyn {
+  box-sizing: border-box;
+  padding: 0.4rem 0;
+  width: 100%;
+  height: 4rem;
+  border: solid 0.1rem #15baec;
+  border-radius: 1rem;
+  flex-shrink: 0;
+  background-color: #00ffff;
+  font-weight: 500;
+}
+.frame-1321314413-Hwn {
+  margin-bottom: 0.2rem;
+  box-sizing: border-box;
+  width: 24.2rem;
+  height: 102.2rem;
+  overflow: hidden;
+  position: relative;
+  background: linear-gradient(
+      180deg,
+      #d81414 32.95%,
+      rgba(11, 194, 235, 0.829) 100%
+  );
+  flex-shrink: 0;
+}
+.frame-54-Cor {
+  box-sizing: border-box;
+  padding: 6.2rem 4rem 6.2rem 6.5rem;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  background: linear-gradient(
+      180deg,
+      #ffffff 32.95%,
+      rgba(40, 186, 218, 0) 100%
+  );
+}
+.frame-9UC {
+  box-sizing: border-box;
+  padding-bottom: 7.9rem;
+  width: 100%;
+  height: 34.7rem;
+  row-gap: 1.2rem;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  border-radius: 2rem;
+}
+.text-UWU {
+  box-sizing: border-box;
+  padding: 0.4rem 1.2rem;
+  width: 100%;
+  font-size: 2.4rem;
+  font-weight: 400;
+  line-height: 1.4285714286;
+  color: #1c1c1c;
+  font-family: Inter, "Source Sans Pro";
+  white-space: nowrap;
+  border-radius: 0.8rem;
+  flex-shrink: 0;
+}
