--- a/public/styles/bayar-request.css
+++ b/public/styles/bayar-request.css
@@ -260,6 +260,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .bayar-request-3Ap .frame-55-87i .frame-54-9ix .frame-fxC .content-KWx .icon-text-sHa {
   margin-right: 0.8rem;
@@ -287,6 +288,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .bayar-request-3Ap .frame-55-87i .frame-54-9ix .frame-fxC .content-8DW .text-sgt {
   margin-right: 0.8rem;
@@ -309,6 +311,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .bayar-request-3Ap .frame-55-87i .frame-54-9ix .frame-fxC .content-yjv .text-jDJ {
   margin-right: 0.8rem;
@@ -331,6 +334,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .bayar-request-3Ap .frame-55-87i .frame-54-9ix .frame-fxC .content-R68 .text-y7e {
   margin-right: 0.8rem;
