--- a/public/styles/dasboarduser.css
+++ b/public/styles/dasboarduser.css
@@ -798,6 +798,8 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
+ 
 }
 .daftar-telur-2v4 .frame-56-2F2 .frame-54-1HJ .frame-trt .content-kPJ .icon-text-uGC {
   margin-right: 0.8rem;
@@ -815,6 +817,7 @@ body {
   font-family: Inter, 'Source Sans Pro';
   white-space: nowrap;
   border-radius: 0.8rem;
+ 
 }
 .daftar-telur-2v4 .frame-56-2F2 .frame-54-1HJ .frame-trt .content-M8C {
   box-sizing: border-box;
@@ -824,6 +827,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .daftar-telur-2v4 .frame-56-2F2 .frame-54-1HJ .frame-trt .content-M8C .text-VEQ {
   margin-right: 0.8rem;
@@ -846,6 +850,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .daftar-telur-2v4 .frame-56-2F2 .frame-54-1HJ .frame-trt .content-b2Y .text-vac {
   margin-right: 0.8rem;
@@ -868,6 +873,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .daftar-telur-2v4 .frame-56-2F2 .frame-54-1HJ .frame-trt .content-Pj6 .text-k3r {
   margin-right: 0.8rem;
