--- a/public/styles/keranjang.css
+++ b/public/styles/keranjang.css
@@ -266,6 +266,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .keranjang-EKS .auto-group-uvvp-xRn .frame-54-tKS .frame-54-Xoe .frame-Fje .content-iNL .icon-text-foN {
   margin-right: 0.8rem;
@@ -293,6 +294,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .keranjang-EKS .auto-group-uvvp-xRn .frame-54-tKS .frame-54-Xoe .frame-Fje .content-7QU .text-s8k {
   margin-right: 0.8rem;
@@ -314,6 +316,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .keranjang-EKS .auto-group-uvvp-xRn .frame-54-tKS .frame-54-Xoe .frame-Fje .content-Xyz .text-VR2 {
   margin-right: 0.8rem;
@@ -336,6 +339,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .keranjang-EKS .auto-group-uvvp-xRn .frame-54-tKS .frame-54-Xoe .frame-Fje .content-Boe .text-YPJ {
   margin-right: 0.8rem;
