--- a/public/styles/riwayat-pembelian.css
+++ b/public/styles/riwayat-pembelian.css
@@ -267,6 +267,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .riwayat-JEt .auto-group-iwex-NAC .frame-55-HHA .frame-54-YPS .frame-fix .content-utC .icon-text-4m6 {
   margin-right: 0.8rem;
@@ -294,6 +295,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .riwayat-JEt .auto-group-iwex-NAC .frame-55-HHA .frame-54-YPS .frame-fix .content-JQY .text-48p {
   margin-right: 0.8rem;
@@ -316,6 +318,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .riwayat-JEt .auto-group-iwex-NAC .frame-55-HHA .frame-54-YPS .frame-fix .content-jVr .text-t7r {
   margin-right: 0.8rem;
@@ -337,6 +340,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .riwayat-JEt .auto-group-iwex-NAC .frame-55-HHA .frame-54-YPS .frame-fix .content-mxL .text-w68 {
   margin-right: 0.8rem;
