--- a/public/styles/informasi-akunuser.css
+++ b/public/styles/informasi-akunuser.css
@@ -266,6 +266,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .informasi-akun-vsJ .auto-group-ac2u-Awz .frame-55-u8t .frame-54-W48 .frame-fbE .content-v1N .icon-text-fje {
   margin-right: 0.8rem;
@@ -293,6 +294,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .informasi-akun-vsJ .auto-group-ac2u-Awz .frame-55-u8t .frame-54-W48 .frame-fbE .content-75r .text-rZE {
   margin-right: 0.8rem;
@@ -315,6 +317,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .informasi-akun-vsJ .auto-group-ac2u-Awz .frame-55-u8t .frame-54-W48 .frame-fbE .content-9HS .text-hZr {
   margin-right: 0.8rem;
@@ -337,6 +340,7 @@ body {
   border: solid 0.1rem #000000;
   border-radius: 0.8rem;
   flex-shrink: 0;
+  background-color: #556ab7;
 }
 .informasi-akun-vsJ .auto-group-ac2u-Awz .frame-55-u8t .frame-54-W48 .frame-fbE .content-nLQ .text-jFe {
   margin-right: 0.8rem;
