--- a/public/styles/blog.css
+++ b/public/styles/blog.css
@@ -1,4 +1,7 @@
 /* stylelint-disable selector-list-comma-newline-after */
+.body{
+  background-image: url('../assets/daftar-telur-bg.png');
+}
 
 .blog-header {
   line-height: 1;
@@ -102,7 +105,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0;
 }
 #neubar {
-  background: #fae8d2;
+  background: rgb(255, 238, 0);
   box-shadow: 4px 6px 12px rgba(0,0,0,0.4)
 }
 
