--- a/public/styles/blog.css
+++ b/public/styles/blog.css
@@ -111,9 +111,14 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-item .active {
   border-radius: 6px;
-  background: linear-gradient(145deg, #ffe7ca, #f5d7b2);
+  background: linear-gradient(145deg, #caffce, #f5d7b2);
   box-shadow:  4px 4px 8px #ddc1a0,
                -4px -4px 8px #f7e5cc;
+}
+.nav-item .acti {
+  border-radius: 6px;
+  background: rgb(70, 247, 0);
+ 
 }
 #neubar .dropdown-menu a:hover {
   color: #454545
