--- a/public/styles/blog.css
+++ b/public/styles/blog.css
@@ -96,6 +96,10 @@ h1, h2, h3, h4, h5, h6 {
  */
 .blog-footer {
   padding: 2.5rem 0;
+  position: absolute;
+  width: 100%;
+  height: auto;
+  bottom: 0;
   color: #727272;
   text-align: center;
   background-color: #f9f9f9;
@@ -118,7 +122,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav-item .acti {
   border-radius: 6px;
   background: rgb(70, 247, 0);
- 
+
 }
 #neubar .dropdown-menu a:hover {
   color: #454545
